--- a/angular_app/src/app/gamemain/gamemain.component.html
+++ b/angular_app/src/app/gamemain/gamemain.component.html
@@ -76,7 +76,7 @@
 <ng-template #votableBlock>
   <table>
     <tbody>
-      <tr *ngFor="let race of isVotableRace" (click)="moveVote(race, game)">
+      <tr *ngFor="let race of isVotableRace" (click)="moveVote(race)">
         <td>{{ race.date }}</td>
         <td>{{ race.name }}</td>
         <td>{{ race.grade }}</td>
