--- a/angular_app/src/app/serchgame/serchgame.component.html
+++ b/angular_app/src/app/serchgame/serchgame.component.html
@@ -1,9 +1,13 @@
 <h2>大会検索</h2>
-<h3>参加する大会を検索する</h3>
 <div>
-    <form (ngSubmit)="onSubmit()">
-        <label for="name">大会名</label>
-        <input type="text" name="gameName" id="name" [(ngModel)]="gameName" required >
-        <button type="submit">参加する</button>
-    </form >
+  <form (ngSubmit)="Serch()">
+    <label for="name">大会IDを入力</label>
+    <input type="text" name="gameID" id="name" [(ngModel)]="gameId" required />
+    <button type="submit">検索する</button>
+  </form>
+  <div *ngIf="gameNumber !== 0">
+    <h3>大会名</h3>
+    <div (click)="join()">{{ gameName }}</div>
+    <button (click)="join()">参加する</button>
+  </div>
 </div>
