--- a/angular_app/src/app/login/login.component.html
+++ b/angular_app/src/app/login/login.component.html
@@ -1,17 +1,37 @@
 <div class="page">
-    <section class="card">
-        <form class="form-login" (ngSubmit)="submitLogin($event)" #loginForm="ngForm">
-            <h2>
-                ログイン
-            </h2>
-              <label for="email">Email address </label>
-              <input type="email" id="email" name="email" placeholder="Email address" 
-              [(ngModel)]="account.email" #email="ngModel" autocomplete="username email" required autofocus>
-              <label for="password">Password</label>
-              <input type="password" id="password" name="password" class="form-control" [(ngModel)]="account.password" #password="ngModel"  required>
-            <button type="submit">Login</button>
-            <button class="btn btn-lg btn-info btn-block" type="submit" [disabled]="!loginForm.form.valid">LOGIN</button><!-- submitLogin()を追加 -->
-       </form>
-       <a routerLink="/account/signup">新規登録</a>         
-    </section>
+  <section class="card">
+    <form class="form-login" (ngSubmit)="submitLogin($event)" #loginForm="ngForm">
+      <h2>ログイン</h2>
+      <label for="email">Email address </label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        placeholder="Email address"
+        [(ngModel)]="account.email"
+        #email="ngModel"
+        autocomplete="username email"
+        required
+        autofocus
+      />
+      <label for="password">Password</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        class="form-control"
+        [(ngModel)]="account.password"
+        #password="ngModel"
+        required
+      />
+      <button
+        class="btn btn-lg btn-info btn-block"
+        type="submit"
+        [disabled]="!loginForm.form.valid"
+      >
+        LOGIN</button
+      ><!-- submitLogin()を追加 -->
+    </form>
+    <a routerLink="/account/signup">新規登録</a>
+  </section>
 </div>
